made chages to make sure breadcrumbs are not truncated in smaller resolutions

--- a/src/components/bs5/breadcrumbs/breadcrumbs.scss
+++ b/src/components/bs5/breadcrumbs/breadcrumbs.scss
@@ -116,7 +116,18 @@ $expander-icon-color: $qld-light-link;
   font-size: 0.875rem;
   line-height: 1.25rem;
   display: none;
-
+  min-width: 3rem;
+  white-space: nowrap; /* Prevents text from wrapping to the next line */
+  overflow: hidden; /* Hides any content that overflows the element's box */
+  text-overflow: ellipsis;
+  max-width: 40vw;
+  width: auto;
+  a,
+  button {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   // Override Bootstrap's default :before pseudo element
   &:before {
     display: none;
@@ -194,6 +205,7 @@ $expander-icon-color: $qld-light-link;
   }
 
   .breadcrumb-item {
+    max-width: unset;
     &:nth-last-child(2) {
       display: flex;
       flex-direction: row-reverse;
